# agri-object-detection

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  evaluate.py  inspect_dataset.py  predict.py  pyproject.toml  train.py
configs/: project.yaml
src/agri_detect/: __init__.py  cli.py  config.py  dataset_inspector.py  device.py  evaluation.py  experiment_log.py  paths.py  prediction.py  training.py
