[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agri-detect"
version = "0.1.0"
description = "Local macOS workflow for agricultural field image detection."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "torchvision",
    "ultralytics",
    "albumentations",
    "opencv-python",
    "pandas",
    "matplotlib",
    "seaborn",
    "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
